loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: illegal start of simple expression
while (!estFacemur())){
                     ^